<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:background="#EBDDE2"
        >
        <ImageView
            android:id="@+id/logo"
            android:background="#EBDDE2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/about_margin"
            android:layout_marginTop="@dimen/about_margin"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/about_margin"
            android:layout_toRightOf="@+id/logo"
            android:background="#EBDDE2"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/title"
                style="@style/BarInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/about_spacing"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BarInfo"
                android:layout_marginBottom="@dimen/about_spacing"
                android:text="@string/about_description" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BarInfo"
                android:layout_marginBottom="@dimen/about_spacing"
                android:text="@string/about_license" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BarInfo"
                android:layout_marginBottom="@dimen/about_spacing"
                android:autoLink="web"
                android:text="@string/about_web" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BarInfo"
                android:layout_marginBottom="@dimen/about_spacing"
                android:text="@string/about_devs" />
        </LinearLayout>
    </RelativeLayout>

</menu>